@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+21-Jun-2010 Jean-Marie Simonet
+[#21020] Ordering of weblinks does not work as expected. Thanks Omar.
+
 21-Jun-2010 Christophe Demko
  # Fixed issue [#21118] Thumbnails not showing on frontend in Popup
 
